force-app/main/default/objects/IVD_Product_Criteria__mdt/IVD_Product_Criteria__mdt.object-meta.xml
<CustomObject>
    <label>IVD Product Criteria</label>
    <pluralLabel>IVD Product Criteria</pluralLabel>
</CustomObject>