force-app/main/default/objects/IVD_Product_Criteria__mdt/fields/Attribute_Name__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Name__c</fullName>
    <description>Stores the IB Technical Attribute Name</description>
    <label>Attribute Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>