force-app/main/default/objects/IVD_Product_Criteria__mdt/fields/Attribute_Type__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Type__c</fullName>
    <description>Field to capture Attribute Type.</description>
    <label>Attribute Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>