force-app/main/default/objects/IVD_Product_Criteria__mdt/fields/Attribute_Value__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Value__c</fullName>
    <description>Field to capture Attribute Value.</description>
    <label>Attribute Value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>