force-app/main/default/objects/IVD_Product_Criteria__mdt/fields/IVD_Product_Identifier__c.field-meta.xml
<CustomField>
    <fullName>IVD_Product_Identifier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product Follows the IVD Cycle if IVD Product Identifier is true.</description>
    <label>IVD Product Identifier</label>
    <type>Checkbox</type>
</CustomField>