force-app/main/default/objects/IVD_Product_Criteria__mdt/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Family Type of a Product</description>
    <label>Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>